# fence

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .secinclude  .secrets.baseline  .travis.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.dev  DockerfileMcrypt  DockerfileShib  Jenkinsfile  Jenkinsfile.security  LICENSE  LICENSE.md  MANIFEST.in  NOTICE  Pipfile  README.md  TECHDEBT.md  alembic.ini  azure-devops-pipeline.yaml  build.sh  cfg_help.py  clear_prometheus_multiproc  cli.py  config.example.yaml  dev-requirements.txt  docker-compose.yml  dockerrun.bash  dockerrunshib.bash  fence-config.yaml  init_client_in_db.sh  init_dev.sh  nginx.conf  notes.txt  pull_request_template.md  pyproject.toml  (+7 more)
.dependabot/: config.yml
.github/: dependabot.yml  labeler.yml  main.workflow
.github/workflows/: blackduck.yml  buildpipeline.yaml  cdis.yaml  cdis.yml  ci.yaml  ci.yml  codecoverage.yaml  codeql-analysis.yml  image_build_push.yaml  include-binaries.txt  include-files.txt  integration_tests.yaml  labeler.yml  markdown-lint-config.jsonc  markdown-lint.yaml  pipeline.yaml  preserve-files.txt  pytest_codecov.yaml  unitTests.yaml  unittests.yaml  validate_markdown.yaml  validate_markdown_links.json  wool.yml
deployment/: fence.conf
deployment/nginx/: nginx.conf
deployment/scripts/: dockerrun.sh
deployment/uwsgi/: uwsgi.ini
deployment/wsgi/: gunicorn.conf.py  wsgi.py
docs/: README.md  azure_architecture.md  azure_devops_pipeline.md  base_user.yaml  dbgap_info.md  example_user.yaml  fence-create-deprecated.md  fence_multifactor_authentication_guide.md  fence_shibboleth.md  ga4gh_passports.md  google_architecture.md  local_multi_fence.md  quickstart_helm.md  register.md  shibboleth.md  user.yaml_guide.md  usersync.md
docs/additional_documentation/: authorization.md  data_access.md  default_expiration_times.md  fence_create.md  fence_shibboleth.md  google_architecture.md  register.md  setup.md  task_tokens.md  terminology.md  token_management.md  user.yaml_guide.md  usersync.md
docs/azure/: azure_architecture.md  azure_devops_pipeline.md
docs/db_diagram/: README.md  fence_db.vdiagram  table_definitions.sql
docs/fence-buckets/implementations/simple-fence-buckets/: Makefile  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/fence-buckets/implementations/simple-fence-buckets/mock_fence/: Makefile  README.md  admin_routes.py  app.py  models.py  sign_routes.py
docs/fence-buckets/implementations/simple-fence-buckets/mock_fence/fence/secrets/: k8s_resolver.py
docs/introduction/: default_expiration_times.md  oidc_and_oauth2.md  token_management.md
docs/misc/: ga4gh_passports.md
fence/: __init__.py  admin.py  auth.py  blacklist.py  config-default.yaml  config.example.yaml  config.py  dbSession.py  error_handler.py  errors.py  exchange_jwt.py  fence-config.yaml  hmac_auth.py  jwt_validator.py  keys.py  local_settings.example.py  login.py  metrics.py  models.py  oauth2.py  pagination.py  protect.py  restful.py  settings.py  storage_creds.py  user.py  utils.py  version_data.py  wisecode_user_sdk.py
fence/authz/: auth.py
fence/blueprints/: admin.py  bucket_info.py  data.py  ga4gh.py  google.py  internal.py  link.py  login.py  metrics.py  misc.py  oauth2.py  privacy.py  rbac.py  register.py  storage_creds.py  user.py  well_known.py
fence/client/: blueprint.py  oauth2_client.py
fence/crm/: hubspot.py
fence/data_model/: models.py
fence/job/: access_token_updater.py  visa_update_cronjob.py
fence/jwt/: blacklist.py  errors.py  keys.py  oauth_validator.py  server.py  token.py  utils.py  validate.py  validator.py
fence/models/: __init__.py  _base.py  _migrate.py  access.py  auth.py  cloud_resources.py  creds.py  logging.py  users.py
fence/oauth2/: errors.py  grants.py  server.py
fence/oidc/: __init__.py  client.py  endpoints.py  errors.py  jwt_generator.py  jwt_server.py  oidc_server.py  server.py
fence/rbac/: __init__.py  auth.py  client.py  errors.py
fence/resources/: audit_service_client.py  utils.py
fence/scripting/: fence_create.py  google_monitor.py
fence/static/: privacy_policy.md
fence/sync/: sync_dbgap.py  sync_users.py  utils.py
fence/templates/: data_use_agreement.html  error.html  oauthorize.html  register_user.html
fence/utils/: __init__.py  token.py
keys/: README.md
keys/key/: README.md
migrations/: README.md  env.py
migrations/models/: migration_client.py
migrations/versions/: 3a5712474808_make_user_active_field_non_nullable.py  5e264d6b3c16_store_user_passport.py  9b3a5a7145d7_authlib_update_1_2_1.py  a04a70296688_non_unique_client_name.py  bff33a927a37_add_acr_and_amr_columns.py  e4c7b0ab68d3_create_tables.py  e695e299f6a6_remove_foreign_key_constraint_googleSA.py  ea7e1b843f82_optional_client_redirect_uri.py
openapi/: README.md  package.json  swagger.yaml  swagger_new.yaml
openapis/: README.md  package.json  swagger.json  swagger.yaml
pkg/: gen3authz-1.0.31-py3-none-any.whl
tests/: README.md  alembic.ini  cdis_utils.py  ci_commands_script.sh  ci_setup.sh  conftest.py  mock_synapse.py  oauth2_utils.py  test-fence-config-missing-az-blob-credentials.yaml  test-fence-config.yaml  test_admin.py  test_app_config.py  test_audit_service.py  test_blacklist.py  test_bucket_info.py  test_cdis.py  test_credentials.py  test_data.py  test_datamodel.py  test_drs.py  test_hmac_to_jwt.py  test_import_fence.py  test_internal.py  test_keys.py  test_logout.py  test_metrics.py  test_misc.py  test_oauth2.py  test_public_keys_endpoint.py  test_session.py  test_settings.py  test_user_endpoint.py  test_utils.py  utils.py
tests/admin/: test_admin_groups.py  test_admin_projects.py  test_admin_provider.py  test_admin_users.py  test_admin_users_endpoints.py
tests/data/: conftest.py  (+8 more)
travis/: pg_hba.conf  postgresql.conf
userdatamodel/: driver.py  init_defaults.py  models.py  user.py
wisecode_aws_sdk/: __init__.py  aws_lambda.py  cognito.py  dynamodb.py  rds.py  s3.py  secretsmanager.py  sqs.py  sts.py  utilities.py
wisecode_sql/: __init__.py
workflowstodelete/: wool.yml
(+240 files in other folders)
