[tool.poetry]
name = "fence"
version = "9.2.0"
description = "Gen3 AuthN/AuthZ OIDC Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/fence"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
alembic = "^1.7.7"

# Temporarily override authlib with a modified, forked version
# where we've made a security patch that got applied in a much later
# version.
#
# This is temporary while we work on the upgrade to the latest version
authlib = {git = "https://github.com/uc-cdis/authlib", rev = "v0.11_CVE_patch_v1"}
# authlib = "*" # let authutils decide which version we're using

authutils = "^6.2.2"
bcrypt = "^3.1.4"
boto3 = "^1.9.91"
botocore = "*"
cached_property = "^1.5.1"
cdiserrors = "<2.0.0"
cdislogging = "^1.0.0"
cdispyutils = "^2.0.1"
cryptography = ">=41.0.2"

# this will be updated when authlib is updated
flask = "==2.3.2"
flask-cors = ">=3.0.3"
flask-restful = ">=0.3.8"
email_validator = "^1.1.1"
gen3authz = "^1.5.1"
gen3cirrus = ">=3.0.1"
gen3config = ">=1.1.0"
gen3users = "^0.6.0"
idna = "^2.10" # https://github.com/python-poetry/poetry/issues/3555
markdown = "^3.1.1"

# this markupsafe pin is due to an error somewhere between Python 3.9.6 and 3.9.16
markupsafe = "^2.0.1"

paramiko = "^2.6.0"
prometheus-client = "^0.9.0"
psycopg2 = "^2.8.3"
PyJWT = "^2.4.0"
python_dateutil = "^2.6.1"
python-jose = "^2.0.2"
pyyaml = "^5.1"
requests = ">=2.18.0"
retry = "^0.9.2"
sqlalchemy = "^1.3.3"
userdatamodel = ">=2.4.3"
werkzeug = ">=2.2.3,<3.0.0"
cachelib = "^0.2.0"
azure-storage-blob = "^12.6.0"
Flask-WTF = "^1.0.0"
boto = "*"


[tool.poetry.dev-dependencies]
addict = "^2.2.1"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test", tag = "2.0.0"}
codacy-coverage = "^1.3.11"
coveralls = "^2.1.1"
mock = "^2.0.0"
moto = "^1.1.24"
pytest = "^3.2.3"
pytest-cov = "^2.5.1"
pytest-flask = ">=0.15.0"

[tool.poetry.scripts]
fence-create = 'bin.fence_create:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
